# speakers-bot

./: Cargo.toml
src/: main.rs
src/audio/: mod.rs
src/discord/: gateway.rs  mod.rs  payload.rs
