[package]
name = "speakers-bot"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"
const_format = "0.2"
serde_json = "1.0"
rodio = { version = "0.17", default-features = false, features = ["vorbis"] }
librespot = "0.4.2"
